--- a/dungeon.html
+++ b/dungeon.html
@@ -17,6 +17,6 @@
 </head>
 <body>
   <canvas id="gameCanvas"></canvas>
-  <script src="dungeon.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
